Fix line breaks in profile
Closes #10, closes #13

--- a/src/site/sass/main.sass
+++ b/src/site/sass/main.sass
@@ -58,6 +58,8 @@ body
 		box-sizing: border-box
 		overflow-y: auto
 		padding: 10px
+		white-space: pre-line
+		overflow-wrap: break-word
 
 		@media screen and (max-width: $layout-a-max)
 			height: unset
